# flacdemon

./: .gitignore  CommandParser.cpp  CommandParser.h  LibraryTitles.h  Makefile.am  README  configure  configure.ac  globals.h  rundaemon  todo.txt
FlacDemon/: Album.cpp  Album.h  CommandMap.cpp  CommandMap.h  CommandParser.cpp  CommandParser.h  Database.cpp  Database.h  File.cpp  File.h  FileImporter.cpp  FileImporter.h  FlacDemon.cpp  FlacDemon.h  FlacDemonAll.h  FlacDemonFileSystem.h  FlacDemonNameSpace.h  FlacDemonUtils.cpp  FlacDemonUtils.h  Group.cpp  Group.h  Player.cpp  Player.h  Scraper.cpp  Scraper.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  SignalHandler.cpp  SignalHandler.h  TCPHandler.cpp  TCPHandler.h  TrackFile.h  TrackListing.cpp  TrackListing.h  avincludes.h  foreach.h  includes.h  main.cpp  (+8 more)
FlacDemonInterface/: FlacDemonInterface.cpp  FlacDemonInterface.h  Group.cpp  Group.h  Library.cpp  Library.h  LibraryListing.cpp  LibraryListing.h  TrackSorter.cpp  TrackSorter.h  Verifier.cpp  Verifier.h  main.cpp
dependencies/libmba-0.9.1/: libmba.0.9.1.dylib  mktool
dependencies/libmba-0.9.1/mktool.dSYM/Contents/: Info.plist
dependencies/libmba-0.9.1/mktool.dSYM/Contents/Resources/DWARF/: mktool
src/common/: Album.cpp  Album.h  CommandManager.cpp  CommandManager.h  CommandMap.h  CommandMapBase.h  CommandParser.cpp  CommandParser.h  FlacDemonNameSpace.h  FlacDemonUtils.cpp  FlacDemonUtils.h  Group.h  KeyValue.h  LibraryListing.cpp  LibraryListing.h  LibraryTitles.h  LibraryTitles.hpp  Session.cpp  SignalHandler.cpp  SignalHandler.h  TrackFile.h  TrackListing.cpp  TrackListing.h  globals.cpp  globals.hpp
src/daemon/: Database.cpp  Database.h  DiscogsTypes.cpp  DiscogsTypes.h  File.cpp  File.h  FileImporter.cpp  FlacDemon.cpp  FlacDemon.h  FlacDemonAll.h  Makefile.am  Player.cpp  Player.h  Scraper.cpp  Scraper.h  TCPHandler.cpp  TCPHandler.h  Track.cpp  Track.h  Verifier.cpp  Verifier.h  daemon.cpp  tests.cpp  tests.h
src/headers/: filesystem.h  foreach.h  globals.h  includes.h  typedefs.h
src/interface/: FlacDemonInterface.cpp  FlacDemonInterface.h  Library.cpp  Library.h  Makefile.am  TrackSorter.cpp  Verifier.cpp  VerifierViewer.cpp  VerifierViewer.h  interface.cpp
