AUTOMAKE_OPTIONS = subdir-objects
AM_CXXFLAGS = --pedantic -Wall -std=c++11

bin_PROGRAMS = flacdemoninterface
flacdemoninterface_SOURCES = ../common/Album.cpp ../common/CommandParser.cpp ../common/FlacDemonUtils.cpp ../common/LibraryListing.cpp ../common/Session.cpp ../common/SessionManager.cpp ../common/SignalHandler.cpp ../common/TrackListing.cpp FlacDemonInterface.cpp Library.cpp TrackSorter.cpp Verifier.cpp interface.cpp
flacdemoninterface_CPPFLAGS = -I../headers -I../common

AM_CPPFLAGS=-I../headers -I../common
 
